--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,65 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    let filtered = inventors.filter((inv) => inv.year >= 1500 && inv.year <= 1599);
+    console.table(filtered);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    let names = inventors.map((inv) => [inv.first, inv.last]);
+    console.table(names);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    let sorted = inventors.sort((a, b) => a.year > b.year ? 1 : -1);
+    console.table(sorted);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    let total = inventors.reduce((sum, inv) => sum + (inv.passed - inv.year), 0);
+    console.log(total);
 
     // 5. Sort the inventors by years lived
+    let lived = inventors.sort((a, b) => {
+      if (a.passed - a.year > b.passed - b.year) {
+        return 1;
+      } else {
+        return -1;
+      };
+    });
+    console.table(lived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // --- (runs at Wikipedia in devtools console) ---
+    // let toponims = document.querySelector(".mw-category");
+    // let links = Array.from(toponims.querySelectorAll("a")); // Make an array
+    // let de = links
+    //   .map((link) => link.textContent)
+    //   .filter((name) => name.includes("de"));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    let sorted_people = people.sort(function(a, b) {
+      if (a.split(", ")[0] > b.split(", ")[0]) {
+        return 1;
+      } else {
+        return -1;
+      };
+    });
+    console.table(sorted_people);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const reduced = data.reduce(function(obj, item) {
+      if (!obj[item]) {
+        obj[item] = 0;
+      };
+      obj[item]++;
+      return obj;
+    }, {});
+    console.log(reduced);
 
   </script>
 </body>
