--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -47,6 +47,9 @@
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex((com) => com.id === 823423);
+    comments.splice(index, 1);
+    console.table(comments);
 
   </script>
 </body>
