--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -48,8 +48,11 @@
     // Find the comment with this ID
     // delete the comment with the ID of 823423
     const index = comments.findIndex((com) => com.id === 823423);
-    comments.splice(index, 1);
-    console.table(comments);
+    const newComments = [
+      // Put all item into one array with "spread operator"
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)];
+    console.table(newComments);
 
   </script>
 </body>
